add: 完善基于vue框架开发的类似vue-cli功能的脚手架

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,6 +1,7 @@
 body {
-  background-color: skyblue;
+  width: 100vw;
   height: 100vh;
-  background-image: url(../assets/images/flower.jpg);
+  // background-color: skyblue;
+  background-image: url('../assets/images/flower.jpg');
   background-size: 100% 100%;
 }
